@@ -1,0 +1,39 @@
+<?xml version="1.0" encoding="utf-8"?>
+	<!-- $Id$ -->
+<form>
+	<fields>
+		<field
+			name="f_text"
+			type="text"
+			label="Stripped Text Field"
+			default="" />
+
+		<field
+			name="f_safe_text"
+			type="text"
+			label="Safe Text Field"
+			default=""
+			filter="safehtml" />
+
+		<field
+			name="f_raw_text"
+			type="text"
+			label="Raw Text Field"
+			default=""
+			filter="raw" />
+
+		<field
+			name="f_date"
+			type="calendar"
+			label="A Date"
+			default=""
+			filter="date" />
+
+		<field
+			name="f_unset"
+			type="text"
+			label="A Date"
+			default=""
+			filter="unset" />
+	</fields>
+</form>
